fix(config): Add catch-all rewrite for Next.js fallback
- Added a catch-all rewrite rule  to the end of the  array in .
- This is necessary because defining custom rewrites for Python endpoints disables Vercel's default behavior of forwarding unmatched requests to the Next.js handler.
- This rule explicitly restores that behavior, ensuring that any request not handled by a specific Python rule (e.g., /api/profiles) is correctly passed to the Next.js application.
- This resolves the 404 errors on Next.js API routes that were occurring after the previous configuration change.

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,7 @@
     { "source": "/api/interview", "destination": "/api/interview.py" },
     { "source": "/api/questionnaires", "destination": "/api/questionnaires.py" },
     { "source": "/api/surveys", "destination": "/api/surveys.py" },
-    { "source": "/api/validation", "destination": "/api/validation.py" }
+    { "source": "/api/validation", "destination": "/api/validation.py" },
+    { "source": "/(.*)", "destination": "/$1" }
   ]
 }
